--- a/php.ini
+++ b/php.ini
@@ -4,7 +4,7 @@
 ; For more information, read our documentation (https://go.cpanel.net/EA4ModifyINI)
 
 allow_url_fopen = On
-display_errors = Off
+display_errors = On
 enable_dl = On
 file_uploads = On
 max_execution_time = 300
