--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ serviceAccountKey-ospiapbatesting-firebase-adminsdk-lbt4s-8db4ebc483.json
 serviceAccountKey-app-ospiapba-c86dea275cf8.json
 admin/config.php
 admin/database.php
+php.ini
